fix the box shadow clipping issue (partially)

--- a/meal-ui/src/styles/local/partials/5-pages/manage-recipes-page/manage-recipes-page.css
+++ b/meal-ui/src/styles/local/partials/5-pages/manage-recipes-page/manage-recipes-page.css
@@ -22,6 +22,6 @@
 	}
 
 	.recipes-grid {
-		grid-template-columns: repeat(3, 1fr);
+		--n-columns: 3;
 	}
 }
